feat: add branches crud (#30) - Add migration branches table - Add branch CRUD API - Add swagger document and unit test
