# src/branches/entities/branch.entity.ts
@@ -1,0 +1,49 @@
+import {
+  Column,
+  CreateDateColumn,
+  DeleteDateColumn,
+  Entity,
+  PrimaryGeneratedColumn,
+  UpdateDateColumn,
+} from 'typeorm';
+
+@Entity('branches')
+export class Branch {
+  @PrimaryGeneratedColumn({ type: 'bigint' })
+  id!: string;
+
+  @Column({ type: 'varchar', length: 50 })
+  name!: string;
+
+  @Column({ type: 'varchar', length: 30 })
+  code!: string;
+
+  @Column({ type: 'varchar', length: 30, nullable: true })
+  phone!: string | null;
+
+  @Column({ type: 'varchar', length: 10, nullable: true })
+  zipcode!: string | null;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  address!: string | null;
+
+  @Column({
+    type: 'varchar',
+    length: 255,
+    name: 'address_detail',
+    nullable: true,
+  })
+  addressDetail!: string | null;
+
+  @Column({ type: 'date', name: 'open_date', nullable: true })
+  openDate!: string | null;
+
+  @CreateDateColumn({ type: 'timestamptz', name: 'created_at' })
+  createdAt!: Date;
+
+  @UpdateDateColumn({ type: 'timestamptz', name: 'updated_at' })
+  updatedAt!: Date;
+
+  @DeleteDateColumn({ type: 'timestamptz', name: 'deleted_at', nullable: true })
+  deletedAt!: Date | null;
+}
